# QP

./: pyproject.toml
vqf/: README.md  VQF.py  pyproject.toml
