[tool.poetry]
name = "qp"
version = "0.1.0"
description = ""
authors = ["Snir Bachar <snir@quantum-machines.co>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
qiskit = "^0.36.2"
scipy = "^1.8.1"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
GenericQAOA = { path = "./GenericQAOA" }

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
