[tool.poetry]
name = "VQF"
version = "0.1.0"
description = ""
authors = ["Snir Bachar <snir@quantum-machines.co>"]

[tool.poetry.dependencies]
python = "^3.8"
generic_qaoa = { path = "/Users/snir/HW/QP/generic_qaoa" }


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
